Wed Feb  4 17:24:56 2004                        Michael Jennings (mej)

Some test improvements.
----------------------------------------------------------------------
Thu Feb  5 16:31:43 2004                        Michael Jennings (mej)

Plugged a few leaks and cleaned up one uninitialized parameter
problem.
----------------------------------------------------------------------
Mon Feb 23 16:52:13 2004                        Michael Jennings (mej)

Removed bogus assertion.

Added map_if.h to install.
----------------------------------------------------------------------
Mon Mar  1 14:29:13 2004                        Michael Jennings (mej)

AVL tree removal work-in-progress.
----------------------------------------------------------------------
Mon Mar  1 14:52:12 2004                        Michael Jennings (mej)

Dumb-duh-dumb-dumb-DUMB!
----------------------------------------------------------------------
Mon Mar  1 21:22:21 2004                        Michael Jennings (mej)

New SRPM
----------------------------------------------------------------------
Wed Mar  3 12:25:22 2004                        Michael Jennings (mej)

New and improved autogen stuff.  Prefers autoconf 2.13 and automake
1.4, but it's also been tested with autoconf 2.57 and automake 1.6.3.
----------------------------------------------------------------------
Wed Mar 10 17:15:14 2004                        Michael Jennings (mej)

Working map implementation using the linked_list class.

Added some new string functions.
----------------------------------------------------------------------
Wed Mar 10 17:58:14 2004                        Michael Jennings (mej)

Added array and dlinked_list implementations of the map interface.
----------------------------------------------------------------------
Wed Mar 10 18:05:28 2004                        Michael Jennings (mej)

Fix "make distcheck"
----------------------------------------------------------------------